# embedchain

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
coap/: Cargo.toml  build.rs
coap/protos/: sensor.proto
coap/src/: lib.rs
include/: mainwindow.h  server.h  settings.h  theme.h
include/blake3/: blake3.h
include/core/: block.h  blockchain.h  chacha20.h  coap.h  database.h  hash.h  logger.h  transaction.h  utils.h
include/pages/: about.h  analytics.h  blockchain_history.h  data_history.h  home.h  location_map.h  main_pages.h  preferences.h
include/sqlite3/: sqlite3.h
include/widgets/: div.h  leftmenu.h  menubutton.h  titlebar.h  togglebutton.h  tooltip.h
resources/: resources.qrc  settings.ini  themes.ini
src/: mainwindow.cpp  server.c  settings.cpp  theme.cpp
src/core/: block.c  blockchain.c  chacha20.c  database.c  hash.c  logger.c  transaction.c  utils.c
src/pages/: about.cpp  analytics.cpp  blockchain_history.cpp  data_history.cpp  home.cpp  location_map.cpp  preferences.cpp
src/widgets/: div.cpp  leftmenu.cpp  menubutton.cpp  titlebar.cpp  togglebutton.cpp  tooltip.cpp
tests/: CMakeLists.txt  client.c
