[package]
name = "coap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
bytes = "1.8.0"
coap = "0.18.0"
coap-lite = "0.11.3"
tokio = {version = "^1.32", features = ["full"]}
prost = { version = "0.13.3", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.13.3", default-features = false }
lazy_static = "1.5.0"

[build-dependencies]
prost-build = { version = "0.13.3" }
